# simplecpphttp

./: .gitignore  CMakeLists.txt  README.md  client.cpp  config.json  config_handler.h  server.cpp
HTTPLib/: AbstractLogger.h  Client.h  HTTPHandler.cpp  HTTPHandler.h  HTTPRequest.h  HTTPResource.h  HTTPResponse.h  HTTPUtils.cpp  HTTPUtils.h  HTTP_MACRO.h  HTTP_METHOD.h  HTTP_PROTOCOL.h  HTTP_STATUS.h  Server.h  ServerException.h  SimpleLogger.cpp  TCPClient.h  TCPServer.h
HTTPLib/abstractions/: AbstractHandler.h
HTTPLib/concepts/: http_concepts.h
HTTPLib/domains/: HTTPRequest.h  HTTPResponse.h
HTTPLib/enums/: HTTP_METHOD.h  HTTP_PROTOCOL.h  HTTP_STATUS.h
HTTPLib/exceptions/: HTTPHandlerException.h  TCPClientException.h  TCPServerException.h
HTTPLib/implementations/http_handler/: HTTPHandler.h  HTTPResource.h
HTTPLib/macro/: HTTP_MACRO.h
HTTPLib/utils/: HTTPUtils.h
Logger/: AbstractLogger.h  SimpleLogger.cpp  SimpleLogger.h
PG/: DBModel.h  PGConnection.cpp  PGConnection.h  PGDb.h  PGPool.cpp  PGPool.h
